--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Trabajo Práctico N°1 Laboratorio III</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Josefina Duret</h1>
+        <img src="foto.png" alt="fotografía">
+        <h3>Profesora de Matemática</h3>
+    </header>
+    <div> <style> body { background-color: rgb(62, 247, 145); } </style>
+        <div> </div>
+        <div> </div>
+    </div>
 </body>
 </html>
