--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajo Práctico N°1 Laboratorio III</title>
+    <link rel="stylesheet" href="Estilos.css">
 </head>
 <body>
     <header>
@@ -11,7 +12,7 @@
         <img src="foto.png" alt="fotografía">
         <h3>Profesora de Matemática</h3>
     </header>
-    <div> <style> body { background-color: rgb(62, 247, 145); } </style>
+    <div> <style> body { background-color: rgb(255, 167, 233); } </style>
         <div> </div>
         <div> </div>
     </div>
