--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <header>
         <h1>Josefina Duret</h1>
+
+    </header>
+    <div class="contenedor">
         <img src="foto.png" alt="fotografía">
         <h3>Profesora de Matemática</h3>
-    </header>
-    <div> <style> body { background-color: rgb(255, 167, 233); } </style>
+        <style> img{width: 300px;}
+                h1 {text-align: center;}</style>
         <div> </div>
         <div> </div>
     </div>
