--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
         <h1>Josefina Duret</h1>
 
     </header>
-    <div class="contenedor">
+    <div class="Imagen">
         <img src="foto.png" alt="fotografía">
         <h3>Profesora de Matemática</h3>
         <style> img{width: 300px;}
                 h1 {text-align: center;}</style>
-        <div> </div>
-        <div> </div>
+    </div >
+    <div class="contenedor">
+    <div class="AcercaDeMi">
+        <h3>  Acerca de mi </h3> 
+    </div>
+    <div class="habilidades"> 
+        <h3> Habilidades </h3>
+    </div>
     </div>
 </body>
 </html>
