--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Estilos.css">
 </head>
 <body>
-    <header>
+    <header class="Titulo">
         <h1>Josefina Duret</h1>
 
     </header>
@@ -19,11 +19,22 @@
     </div >
     <div class="contenedor">
     <div class="AcercaDeMi">
+        <img src="AcercaDeMi.png">
         <h3>  Acerca de mi </h3> 
+
     </div>
+    
     <div class="habilidades"> 
         <h3> Habilidades </h3>
     </div>
     </div>
+    <div class="Informacion">
+        <ul>
+            <li>Edad: 29 años </li>
+            <li>Lugar y Fecha de Nacimiento: La Rioja - Argentina, 21 de Ocubre de 1994</li>
+        </ul>
+        <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva.</p>
+    </div>
+
 </body>
 </html>
