--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h3> Habilidades </h3>
     </div>
     </div>
+<div class="contenedor2">
     <div class="Informacion">
         <ul>
             <li>Edad: 29 años </li>
@@ -35,6 +36,22 @@
         </ul>
         <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva.</p>
     </div>
+    <div class="Aportes">
+        <h3> Aportes  </h3>
+        <p> Con mi formación en tecnología educativa y conocimientos en programación, tengo una comprensión avanzada de los dispositivos tecnológicos, enfocándome especialmente en su aplicación y utilidad. </p>
+
+    </div>
+    <div class="CompetenciasGenerales">
+        <h3> Competencias Generales</h3>
+        <ul>
+            <li>No soy generadora de problemas y conflictos.</li>
+            <li>Capacidad para resolver problemas, puntualidad y sentido de responsabilidad.</li>
+            <li>Compromiso institucional.</li>
+            <li>Empatía.</li>
+            <li>Disposición para personal de confianza y compromiso institucional.</li>
+        </ul>
+    </div>
+</div>
 
 </body>
 </html>
