--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 <div class="contenedor2">
     <div class="Informacion">
-        <ul>
+        <ul class="items">
             <li>Edad: 29 años </li>
             <li>Lugar y Fecha de Nacimiento: La Rioja - Argentina, 21 de Ocubre de 1994</li>
         </ul>
@@ -38,12 +38,12 @@
     </div>
     <div class="Aportes">
         <h3> Aportes  </h3>
-        <p> Con mi formación en tecnología educativa y conocimientos en programación, tengo una comprensión avanzada de los dispositivos tecnológicos, enfocándome especialmente en su aplicación y utilidad. </p>
+        <p class="formacion"> Con mi formación en tecnología educativa y conocimientos en programación, tengo una comprensión avanzada de los dispositivos tecnológicos, enfocándome especialmente en su aplicación y utilidad. </p>
 
     </div>
     <div class="CompetenciasGenerales">
         <h3> Competencias Generales</h3>
-        <ul>
+        <ul class="items2">
             <li>No soy generadora de problemas y conflictos.</li>
             <li>Capacidad para resolver problemas, puntualidad y sentido de responsabilidad.</li>
             <li>Compromiso institucional.</li>
