--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajo Práctico N°1 Laboratorio III</title>
     <link rel="stylesheet" href="Estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body background="Fondo.jpg">
     <header class="Titulo">
         <h1>Josefina Duret</h1>
 
@@ -20,12 +23,12 @@
     <div class="contenedor">
     <div class="AcercaDeMi">
         <img src="AcercaDeMi.png">
-        <h3>  Acerca de mi </h3> 
+        <h3 class="textoAcercademi">  Acerca de mi </h3> 
 
     </div>
     
     <div class="habilidades"> 
-        <h3> Habilidades </h3>
+        <h3> Habilidades y Competencias </h3>
     </div>
     </div>
 <div class="contenedor2">
@@ -52,6 +55,17 @@
         </ul>
     </div>
 </div>
+<div class="contenedor3">
+    <div class="hablidades_matematica">
+        <h3>Habilidades en Matemática</h3>
+        <ul class="items3">
+            <li>Matemática Básica</li>
+            <li>Matemática Discreta</li>
+            <li>Matemática Aplicada</li>
+        </ul>
 
+    </div>
+
+</div>
 </body>
 </html>
