--- a/index.html
+++ b/index.html
@@ -31,41 +31,59 @@
         <h3> Habilidades y Competencias </h3>
     </div>
     </div>
-<div class="contenedor2">
-    <div class="Informacion">
-        <ul class="items">
-            <li>Edad: 29 años </li>
-            <li>Lugar y Fecha de Nacimiento: La Rioja - Argentina, 21 de Ocubre de 1994</li>
-        </ul>
-        <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva.</p>
-    </div>
-    <div class="Aportes">
-        <h3> Aportes  </h3>
-        <p class="formacion"> Con mi formación en tecnología educativa y conocimientos en programación, tengo una comprensión avanzada de los dispositivos tecnológicos, enfocándome especialmente en su aplicación y utilidad. </p>
+<div class="cont2y3">
+        
+    <div class="contenedor2">
+        <div class="Informacion">
+            <ul class="items">
+                <li>Edad: 29 años </li>
+                <li>Lugar y Fecha de Nacimiento: La Rioja - Argentina, 21 de Ocubre de 1994</li>
+            </ul>
+            <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva.</p>
+        </div>
+        <div class="Aportes">
+            <h3> Aportes  </h3>
+            <p class="formacion"> Con mi formación en tecnología educativa y conocimientos en programación, tengo una comprensión avanzada de los dispositivos tecnológicos, enfocándome especialmente en su aplicación y utilidad. </p>
 
+        </div>
+        <div class="CompetenciasGenerales">
+            <h3> Competencias Generales</h3>
+            <ul class="items2">
+                <li>No soy generadora de problemas y conflictos.</li>
+                <li>Capacidad para resolver problemas, puntualidad y sentido de responsabilidad.</li>
+                <li>Compromiso institucional.</li>
+                <li>Empatía.</li>
+                <li>Disposición para personal de confianza y compromiso institucional.</li>
+            </ul>
+        </div>
     </div>
-    <div class="CompetenciasGenerales">
-        <h3> Competencias Generales</h3>
-        <ul class="items2">
-            <li>No soy generadora de problemas y conflictos.</li>
-            <li>Capacidad para resolver problemas, puntualidad y sentido de responsabilidad.</li>
-            <li>Compromiso institucional.</li>
-            <li>Empatía.</li>
-            <li>Disposición para personal de confianza y compromiso institucional.</li>
-        </ul>
+    <div class="contenedor3">
+        <div class="hablidades_matematica">
+            <h3>Habilidades en Matemática</h3>
+            <ul class="items3">
+                <li>Claridad en la Explicación: Facilidad para desglosar conceptos matemáticos complejos.</li>
+                <li>Resolución de Problemas: Promuevo el pensamiento crítico mediante enfoques lógicos y estructurados.</li>
+                <li>Adaptabilidad: Ajusto mi enseñanza a diversos estilos de aprendizaje.</li>
+                <li>Creatividad en la Enseñanza: Diseño actividades que hacen las matemáticas atractivas. </li>
+                <li>Evaluación Formativa: Realizo seguimientos continuos para personalizar el apoyo académico. </li>
+            </ul>
+        <div class="Competencias_teceduc">
+            <h3>Competencias en Tecnología Educativa</h3>
+            <ul class="items4">
+                <li>Integración de Tecnología: Enriquezco el aprendizaje matemático con herramientas digitales.
+                </li>
+                <li>Desarrollo de Recursos Digitales: Creo materiales educativos interactivos.
+                </li>
+                <li>Aprendizaje Virtual: Gestiono plataformas de aprendizaje en línea efectivamente.
+                </li>
+                <li>Formación Docente en Tecnología: Comparto mi conocimiento tecnológico con colegas.
+                </li>
+                <li>Innovación Educativa: Exploro nuevas tecnologías y metodologías educativas.
+                </li>
+        </div>
     </div>
+
 </div>
-<div class="contenedor3">
-    <div class="hablidades_matematica">
-        <h3>Habilidades en Matemática</h3>
-        <ul class="items3">
-            <li>Matemática Básica</li>
-            <li>Matemática Discreta</li>
-            <li>Matemática Aplicada</li>
-        </ul>
-
-    </div>
-
 </div>
 </body>
 </html>
