--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
     </div>
     
     <div class="habilidades"> 
-        <h3> Habilidades y Competencias </h3>
+        <img src="habil.png">
+        <h3 class="textoHabilidades"> Habilidades y Competencias </h3>
     </div>
     </div>
+
 <div class="cont2y3">
         
     <div class="contenedor2">
         <div class="Informacion">
             <ul class="items">
-                <li>Edad: 29 años </li>
+                <li><span class="edad">Edad:</span> 29 años </li>
                 <li>Lugar y Fecha de Nacimiento: La Rioja - Argentina, 21 de Ocubre de 1994</li>
             </ul>
             <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva.</p>
@@ -80,10 +82,23 @@
                 </li>
                 <li>Innovación Educativa: Exploro nuevas tecnologías y metodologías educativas.
                 </li>
+            </ul>
+            <div>
+                <img class="imag_habilidades" src="habilidades.png" >
+            </div>
         </div>
     </div>
 
 </div>
 </div>
+
+<div class="imag_educacion">
+    <img class ="educ" src="Educación.png">
+</div>
+
+<div class="estudios">  
+    <h2>Estudios</h2>
+</div>
+
 </body>
 </html>
