--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="habilidades"> 
         <img src="habil.png">
         <h3 class="textoHabilidades"> Habilidades y Competencias </h3>
+    
     </div>
     </div>
 
@@ -39,7 +40,7 @@
         <div class="Informacion">
             <ul class="items">
                 <li><span class="edad">Edad:</span> 29 años </li>
-                <li>Lugar y Fecha de Nacimiento: La Rioja - Argentina, 21 de Ocubre de 1994</li>
+                <li><span class="fecha"> Lugar y Fecha de Nacimiento:</span> La Rioja - Argentina, 21 de Ocubre de 1994</li>
             </ul>
             <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva.</p>
         </div>
@@ -99,6 +100,28 @@
 <div class="estudios">  
     <h2>Estudios</h2>
 </div>
-
+<div class="textoEstudios">
+    <p> Colegio Luis A. Huergo (U.T.N), La Rioja Capital (2007-2012)  </p>
+            <ul>
+                <li>Producción de Bienes y Servicios </li>
+            </ul>
+    <P>Universidad tecnológica Nacional U.T.N La Rioja Capital (2013-2014)</P>
+            <ul>
+                <li>Ingeniería Electrónica (Estudios incompletos). </li>
+            </ul>
+    <P>I.S.F.D Insp. Albino Sánchez Barros, La Rioja Capital (2015-2020) </P> 
+            <ul>
+                <li>Profesorado de Matemática </li>
+            </ul>
+    <P>Universidad tecnológica Nacional U.T.N La Rioja Capital (2021-2024)</P> 
+            <ul>
+                <li>Licenciatura en Tecnología educativa ( Realizando tesis) </li>
+            </ul>
+    <P>Universidad tecnológica Nacional U.T.N La Rioja Capital (2023-2024)</P>
+            <ul>
+                <li>Tecnicatura Universitaria en Programación (cursando)</li>
+            </ul>
+   
+</div>
 </body>
 </html>
