--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <div class="contenedor">
     <div class="AcercaDeMi">
         <img src="AcercaDeMi.png">
-        <h3 class="textoAcercademi">  Acerca de mi </h3> 
+        <h2 class="textoAcercademi">  Acerca de mi </h2> 
 
     </div>
     
     <div class="habilidades"> 
         <img src="habil.png">
-        <h3 class="textoHabilidades"> Habilidades y Competencias </h3>
+        <h2 class="textoHabilidades"> Habilidades y Competencias </h2>
     
     </div>
     </div>
@@ -39,8 +39,8 @@
     <div class="contenedor2">
         <div class="Informacion">
             <ul class="items">
-                <li><span class="edad">Edad:</span> 29 años </li>
-                <li><span class="fecha"> Lugar y Fecha de Nacimiento:</span> La Rioja - Argentina, 21 de Ocubre de 1994</li>
+                <li>Edad:29 años </li>
+                <li> Lugar y Fecha de Nacimiento: La Rioja - Argentina, 21 de Ocubre de 1994</li>
             </ul>
             <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva.</p>
         </div>
@@ -107,7 +107,7 @@
             </ul>
     <P>Universidad tecnológica Nacional U.T.N La Rioja Capital (2013-2014)</P>
             <ul>
-                <li>Ingeniería Electrónica (Estudios incompletos). </li>
+                <li>Ingeniería Electrónica (<span class="estudios1">Estudios incompletos</span>). </li>
             </ul>
     <P>I.S.F.D Insp. Albino Sánchez Barros, La Rioja Capital (2015-2020) </P> 
             <ul>
@@ -115,13 +115,28 @@
             </ul>
     <P>Universidad tecnológica Nacional U.T.N La Rioja Capital (2021-2024)</P> 
             <ul>
-                <li>Licenciatura en Tecnología educativa ( Realizando tesis) </li>
+                <li>Licenciatura en Tecnología educativa ( <span class="estudios2">Realizando tesis</span>) </li>
             </ul>
     <P>Universidad tecnológica Nacional U.T.N La Rioja Capital (2023-2024)</P>
             <ul>
-                <li>Tecnicatura Universitaria en Programación (cursando)</li>
+                <li>Tecnicatura Universitaria en Programación (<span class="estudios3">cursando</span>)</li>
             </ul>
    
+</div >
+<div class= "contacto">
+    <img class="imag_contacto" src="contacto.png" alt="">
+</div>
+
+<div class="textoContacto">
+    <h2>Contacto</h2>
+</div>
+<div class="datos">
+    <ul>
+        <li><h2>Teléfono: 0380-154251105</h2> </li>
+        <li><h2>Correo: josefinaduret2110@gmail.com</h2></li>
+        <li><h2>Dirección: Calle 6 B° Universitario - La Rioja - Argentina</h2> </li>
+        <li><h2>Linkedin: <a href="https://www.linkedin.com/in/josefina-duret-959a45230/"><img class="linkedin" src="linkedin.png" ></a></h2></li>
+    </ul>
 </div>
 </body>
 </html>
