--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li>Edad:29 años </li>
                 <li> Lugar y Fecha de Nacimiento: La Rioja - Argentina, 21 de Ocubre de 1994</li>
             </ul>
-            <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva.</p>
+            <p> Como profesora de matemáticas en proceso de finalizar mi Licenciatura en Tecnología Educativa, combino habilidades clave en matemáticas con competencias avanzadas en tecnología educativa para proporcionar una enseñanza innovadora y efectiva. </p>
         </div>
         <div class="Aportes">
             <h3> Aportes  </h3>
@@ -62,7 +62,7 @@
     </div>
     <div class="contenedor3">
         <div class="hablidades_matematica">
-            <h3>Habilidades en Matemática</h3>
+            <h3 class="matematica">Habilidades en Matemática</h3>
             <ul class="items3">
                 <li>Claridad en la Explicación: Facilidad para desglosar conceptos matemáticos complejos.</li>
                 <li>Resolución de Problemas: Promuevo el pensamiento crítico mediante enfoques lógicos y estructurados.</li>
@@ -71,7 +71,7 @@
                 <li>Evaluación Formativa: Realizo seguimientos continuos para personalizar el apoyo académico. </li>
             </ul>
         <div class="Competencias_teceduc">
-            <h3>Competencias en Tecnología Educativa</h3>
+            <h3 class="compe">Competencias en Tecnología Educativa</h3>
             <ul class="items4">
                 <li>Integración de Tecnología: Enriquezco el aprendizaje matemático con herramientas digitales.
                 </li>
