--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </header>
     <div class="Imagen">
-        <img src="foto.png" alt="fotografía">
+        <img src="foto.png" >
         <h3>Profesora de Matemática</h3>
         <style> img{width: 300px;}
                 h1 {text-align: center;}</style>
