--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </header>
     <div class="Imagen">
-        <img src="foto.png" >
+        <img src="Foto.png" >
         <h3>Profesora de Matemática</h3>
 
     </div >
