--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </ul>
     <P>Universidad tecnológica Nacional U.T.N La Rioja Capital (2023-2024)</P>
             <ul>
-                <li>Tecnicatura Universitaria en Programación (<span class="estudios3">cursando</span>)</li>
+                <li>Tecnicatura Universitaria en Programación (<span class="estudios3">Cursando</span>)</li>
             </ul>
    
 </div >
@@ -131,8 +131,8 @@
 </div>
 <div class="datos">
     <ul>
-        <li><h2>Teléfono: 0380-154251105</h2> </li>
-        <li><h2>Correo: josefinaduret2110@gmail.com</h2></li>
+        <li><h2>Teléfono: <a href="tel:3804251105">0380-154251105</a></h2> </li>
+        <li><h2>Correo: <a href="mailto:josefinaduret2110@gmail.com">josefinaduret2110@gmail.com</a> </h2></li>
         <li><h2>Dirección: Calle 6 B° Universitario - La Rioja - Argentina</h2> </li>
         <li><h2>Linkedin: <a href="https://www.linkedin.com/in/josefina-duret-959a45230/"><img class="linkedin" src="linkedin.png" ></a></h2></li>
     </ul>
